# modelo_Ngrams_interactivo

./: .gitignore  LICENSE  README.md
Backend/: build_demo.ps1  main.cpp  main_test.cpp  ngrams_app  test_frecuencias.cpp
Backend/Ngrams/: Ngram.hpp
Backend/Ngrams/Ngram_Base/: NGramBase.cpp  NGramBase.hpp
Backend/Ngrams/manager/: NGramManager.cpp  NGramManager.hpp  PredictionSession.cpp  PredictionSession.hpp
Backend/Ngrams/tipos/bigrams/: Bigram.cpp  Bigram.hpp
Backend/Ngrams/tipos/unigrams/: Unigrams.CPP  Unigrams.hpp
Backend/data/: 2grams_english.csv  2grams_english.txt  2grams_english_backup.txt  bigrams.txt  general.txt
Backend/utils/: FileManager.cpp  FileManager.hpp  InputOutput.cpp  InputOutput.hpp  TextBuilder.cpp  TextBuilder.hpp  TextProcessor.cpp  TextProcessor.hpp  Tokenizador.hpp  tokenizador.cpp  tokenizador.hpp
Frontend/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  test_backend_direct.cpp
Frontend/Components/: ActionBar.cpp  ActionBar.h  InputWidget.cpp  InputWidget.h  OptionsList.cpp  OptionsList.h  PredictionButton.cpp  PredictionButton.h  TextDisplay.cpp  TextDisplay.h
Frontend/Resources/: DarkTheme.qss  resources.qrc
